--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>travelers favorite spot to find rent</title>
-</head>
-<body>
-    <h1>welcome to you rent : see all listing deals </h1>
+<% layout('layouts/boilerplate') -%>
 
-    
-</body>
-</html>
+   <div class="row">
+       <div class=" col-md-12">
+            <div>
+                <h1>welcome to you rent : see all listing deals </h1>
+
+                <a href="/bookings" class="btn btn-info">view bookings available</a>
+            </div>
+       </div>
+   </div>
