--- a/views/bookings/index.ejs
+++ b/views/bookings/index.ejs
@@ -17,7 +17,7 @@
                   <div class="lh-content">
                     <span class="category">Cars &amp; Vehicles</span>
                     <a href="#" class="bookmark"><span class="icon-heart"></span></a>
-                    <h3><a href="#"><%= booking.title %></a></h3>
+                    <h3><a href="/bookings/<%= booking._id %>"><%= booking.title %></a></h3>
                     <address><%= booking.location %></address>
                     <p class="mb-0">
                       <span class="icon-star text-warning"></span>
