--- a/views/bookings/show.ejs
+++ b/views/bookings/show.ejs
@@ -24,7 +24,7 @@
       <div class="row">
         <div class="col-lg-8">
           
-          <div class="mb-4" style="margin-top: -150px;">
+          <div class="mb-4" >
             <div class="slide-one-item home-slider owl-carousel">
               <div><img src="/images/img_2.jpg" alt="Image" class="img-fluid rounded"></div>
               <div><img src="/images/img_3.jpg" alt="Image" class="img-fluid rounded"></div>
@@ -45,7 +45,7 @@
         <div class="col-lg-3 ml-auto">
 
           <div class="mb-5">
-            <h3 class="h5 text-black mb-3">Filters</h3>
+            <h3 class="h5 text-black my-3">Filters</h3>
             <form action="#" method="post">
               <div class="form-group">
                 <input type="text" placeholder="What are you looking for?" class="form-control">
@@ -129,7 +129,69 @@
 
         </div>
 
+      <h3>Leave a review</h3  >
+        <form action="/bookings/<%= booking._id %>/reviews" method="post" class="validated-form" novalidate>
+          <div class="row form-group">
+            <div class="col-md-4">
+              <label for="customRange3">Rating</label>
+              <input type="range" class="custom-range" name="rating" min="1" max="5"  id="customRange3">
+            </div>
+            <div class="col-md-9">
+              <label class="text-black form-label" for="review">Reviews</label> 
+              <textarea name="body" id="review" class="form-control" required cols="20" rows="3"></textarea>  
+              <div class="valid-feedback">
+                Looks good!
+              </div>  
+            </div>
+            <div class="form-group my-3">
+              <button class="btn btn-success" type="submit">submit</button>
+            </div>
+        </form>
+        </div>
+      </div>
+     <div class="row">
+        <div class="col-md-9">
+          <div  class="mb-3">
+            <% for(let review of booking.reviews) { %>
+            <div class="card mb-3 ">
+              <div class="card-body">
+                  <h5 class="card-title">Rating :<%= review.rating %> </h5>  
+                  <p class="card-body"><%= review.body %></p>
+                  <form action="/bookings/<%= booking._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-sm btn-danger">Delete</button>
+                  </form>  
+                </div>
+              </div>
+              <% } %> 
+              
+          </div>
+        </div>
+     </div>
       </div>
     </div>
   </div>
+
+
+  <script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+    'use strict'
+    
+    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+    var forms = document.querySelectorAll('.validated-form')
+    
+    // Loop over them and prevent submission
+    Array.prototype.slice.call(forms)
+      .forEach(function (form) {
+        form.addEventListener('submit', function (event) {
+          if (!form.checkValidity()) {
+            event.preventDefault()
+            event.stopPropagation()
+          }
+    
+          form.classList.add('was-validated')
+        }, false)
+      })
+    })()
+    </script>
 
