--- a/views/bookings/show.ejs
+++ b/views/bookings/show.ejs
@@ -17,9 +17,10 @@
       </div>
     </div>
   </div>  
-
-
+  <%- include('../partials/flash') %> 
+  
   <div class="site-section">
+    
     <div class="container">
       <div class="row">
         <div class="col-lg-8">
