--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -7,43 +7,45 @@
 <div class="site-section bg-light">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-7 mb-5"  data-aos="fade">
+        <div class="col-md-7 mb-5"  >
 
           <h2 class="mb-5 text-black">Register</h2>
 
-          <form action="#" class="p-5 bg-white">
+          <form action="/register" method="POST" class="p-5 bg-white validated-form"  novalidate>
            
             <div class="row form-group">
               
-              <div class="col-md-12">
-                <label class="text-black" for="email">Email</label> 
-                <input type="email" id="email" class="form-control">
+              <div class="mb-3 col-md-12">
+                <label  class="form-label text-black" for="email">Email</label>
+                <input class="form-control" type="text" placeholder="email" name="email" id="email" required>
+                   <div class="valid-feedback">
+                    Looks good!
+                  </div>
               </div>
-            </div>
-
-            <div class="row form-group">
-              <div class="col-md-12">
-                <label class="text-black" for="subject">Password</label> 
-                <input type="password" id="subject" class="form-control">
+              <div class="mb-3 col-md-12">
+                <label  class="form-label text-black" for="username">Username</label>
+                <input class="form-control" type="text" placeholder="username" name="username" id="username" required>
+                   <div class="valid-feedback">
+                    Looks good!
+                  </div>
               </div>
-            </div>
-
-            <div class="row form-group">
-              <div class="col-md-12">
-                <label class="text-black" for="subject">Re-type Password</label> 
-                <input type="password" id="subject" class="form-control">
+              <div class="mb-3 col-md-12">
+                <label  class="form-label text-black" for="password">Password</label>
+                <input class="form-control" type="password" placeholder="password" name="password" id="password" required>
+                   <div class="valid-feedback">
+                    Looks good!
+                  </div>
               </div>
-            </div>
 
-            <div class="row form-group">
+            <!-- <div class="row form-group">
               <div class="col-12">
                 <p>Have an account? <a href="login.html">Log In</a></p>
               </div>
-            </div>
+            </div> -->
 
-            <div class="row form-group">
+            <div class="row form-group mt-3">
               <div class="col-md-12">
-                <input type="submit" value="Sign In" class="btn btn-primary py-2 px-4 text-white">
+                <button class="btn btn-primary text-white">Register</button>
               </div>
             </div>
 
@@ -54,3 +56,27 @@
       </div>
     </div>
   </div>
+
+
+  <script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+    'use strict'
+    
+    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+    var forms = document.querySelectorAll('.validated-form')
+    
+    // Loop over them and prevent submission
+    Array.prototype.slice.call(forms)
+      .forEach(function (form) {
+        form.addEventListener('submit', function (event) {
+          if (!form.checkValidity()) {
+            event.preventDefault()
+            event.stopPropagation()
+          }
+    
+          form.classList.add('was-validated')
+        }, false)
+      })
+    })()
+    </script>
