--- a/views/bookings/show.ejs
+++ b/views/bookings/show.ejs
@@ -34,14 +34,16 @@
             </div>
           </div>
           <h4 class="card-title "><%= booking.price %> MAD /night </h4>
+          <h4 class="card-title ">Created by <%= booking.author.username %></h4>
           <h4 class="h5 mb-4 text-black">Description</h4>
           <p><%= booking.description %></p>
           <p class="mt-3"><a href="#" class="btn btn-primary">Get In Touch</a></p>
+         <% if (currentUser && booking.author.equals(currentUser)) { %>
           <a href="/bookings/<%= booking._id %>/edit" class="btn card-link btn-info">Edit</a>
           <form class="d-inline" action="/bookings/<%= booking._id %>?_method=DELETE" method="post">
                <button class="btn card-link btn-danger"> Delete</button>   
            </form>
-
+         <% } %>
         </div>
         <div class="col-lg-3 ml-auto">
 
@@ -130,33 +132,38 @@
 
         </div>
 
-      <h3>Leave a review</h3  >
-        <form action="/bookings/<%= booking._id %>/reviews" method="post" class="validated-form" novalidate>
-          <div class="row form-group">
-            <div class="col-md-4">
-              <label for="customRange3">Rating</label>
-              <input type="range" class="custom-range" name="rating" min="1" max="5"  id="customRange3">
-            </div>
-            <div class="col-md-9">
-              <label class="text-black form-label" for="review">Reviews</label> 
-              <textarea name="body" id="review" class="form-control" required cols="20" rows="3"></textarea>  
-              <div class="valid-feedback">
-                Looks good!
-              </div>  
-            </div>
-            <div class="form-group my-3">
-              <button class="btn btn-success" type="submit">submit</button>
-            </div>
-        </form>
-        </div>
-      </div>
      <div class="row">
+      <div class="col-md-9">
+        <% if (currentUser) { %>
+          <h3>Leave a review</h3  >
+            <form action="/bookings/<%= booking._id %>/reviews" method="post" class="validated-form" novalidate>
+              <div class="row form-group">
+                <div class="col-md-7">
+                  <label for="customRange3">Rating</label>
+                  <input type="range" class="custom-range" name="rating" min="1" max="5"  id="customRange3">
+                </div>
+                <div class="col-md-9">
+                  <label class="text-black form-label" for="review">Reviews</label> 
+                  <textarea name="body" id="review" class="form-control" required cols="20" rows="4"></textarea>  
+                  <div class="valid-feedback">
+                    Looks good!
+                  </div>  
+                </div>
+                <div class="form-group my-3">
+                  <button class="btn btn-success" type="submit">submit</button>
+                </div>
+            </form>
+        <% } %>
+      </div>
+      <div class="row">
         <div class="col-md-9">
+          <h3>Reviews</h3  >
           <div  class="mb-3">
             <% for(let review of booking.reviews) { %>
             <div class="card mb-3 ">
               <div class="card-body">
                   <h5 class="card-title">Rating :<%= review.rating %> </h5>  
+                  <h6 class="card-subtitle fw-bold mb-2">by <%= review.author.username %> </h6>
                   <p class="card-body"><%= review.body %></p>
                   <form action="/bookings/<%= booking._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                     <button class="btn btn-sm btn-danger">Delete</button>
@@ -168,6 +175,10 @@
           </div>
         </div>
      </div>
+     </div>
+        </div>
+      </div>
+    
       </div>
     </div>
   </div>
