--- a/views/bookings/show.ejs
+++ b/views/bookings/show.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate') -%>
-
+<link rel="stylesheet" href="/css/stars.css">
 <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('<%= booking.image %> ');" data-aos="fade" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row align-items-center justify-content-center text-center">
@@ -132,18 +132,36 @@
 
         </div>
 
+      
      <div class="row">
       <div class="col-md-9">
         <% if (currentUser) { %>
           <h3>Leave a review</h3  >
             <form action="/bookings/<%= booking._id %>/reviews" method="post" class="validated-form" novalidate>
               <div class="row form-group">
-                <div class="col-md-7">
-                  <label for="customRange3">Rating</label>
-                  <input type="range" class="custom-range" name="rating" min="1" max="5"  id="customRange3">
+                <div class="col-md-7 mt-3">
+                  <!-- <label for="customRange3">Rating</label> -->
+                  <!-- <input type="range" class="custom-range" name="rating" min="1" max="5"  id="customRange3"> -->
+                            <!-- rating form  -->
+                <fieldset class="starability-basic">
+                  <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked aria-label="No rating." />
+                  <input type="radio" id="first-rate1" name="rating" value="1" />
+                  <label for="first-rate1" title="Terrible">1 star</label>
+                  <input type="radio" id="first-rate2" name="rating" value="2" />
+                  <label for="first-rate2" title="Not good">2 stars</label>
+                  <input type="radio" id="first-rate3" name="rating" value="3" />
+                  <label for="first-rate3" title="Average">3 stars</label>
+                  <input type="radio" id="first-rate4" name="rating" value="4" />
+                  <label for="first-rate4" title="Very good">4 stars</label>
+                  <input type="radio" id="first-rate5" name="rating" value="5" />
+                  <label for="first-rate5" title="Amazing">5 stars</label>
+                </fieldset>
+                <!-- rating form  -->
                 </div>
+      
                 <div class="col-md-9">
-                  <label class="text-black form-label" for="review">Reviews</label> 
+                  <legend>Review:</legend>
+                  <!-- <label class="text-black form-label" for="review">Review</label>  -->
                   <textarea name="body" id="review" class="form-control" required cols="20" rows="4"></textarea>  
                   <div class="valid-feedback">
                     Looks good!
@@ -162,8 +180,14 @@
             <% for(let review of booking.reviews) { %>
             <div class="card mb-3 ">
               <div class="card-body">
-                  <h5 class="card-title">Rating :<%= review.rating %> </h5>  
-                  <h6 class="card-subtitle fw-bold mb-2">by <%= review.author.username %> </h6>
+                  <!-- <h5 class="card-title">Rating :<%= review.rating %> </h5>   -->
+                  <!-- rating -->
+                  <h3><%= review.author.username %> </h3>
+                  <p class="starability-result" data-rating="<%= review.rating %>">
+                    <!-- Rated: <%= review.rating %> stars -->
+                  </p>
+                  <!-- rating -->
+                  <!-- <h6 class="card-subtitle fw-bold mb-2">by <%= review.author.username %> </h6> -->
                   <p class="card-body"><%= review.body %></p>
                   <form action="/bookings/<%= booking._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                     <button class="btn btn-sm btn-danger">Delete</button>
