--- a/views/bookings/create.ejs
+++ b/views/bookings/create.ejs
@@ -4,7 +4,7 @@
   <h1 class="text-center">Create new Booking</h1>
   <div class="col-6 offset-3">
       
-  <form action="/bookings" method="post" class="validated-form" novalidate>
+  <form action="/bookings" method="post" class="validated-form" novalidate enctype="multipart/form-data">
       <div class="mb-3">
           <label  class="form-label" for="title">Title</label>
           <input class="form-control" type="text" placeholder="title" name="title" id="title" required>
@@ -28,8 +28,8 @@
             </div>
       </div>
       <div class="mb-3">
-          <label class="form-label" for="image">Image</label>
-          <input class="form-control" type="text" placeholder="ex: www.image.com/link" name="image" id="image" required>
+        <label class="form-label" for="image">Images</label>
+        <input type="file" class="form-control" name="image" id="image" multiple>
           <div class="valid-feedback">
               Looks good!
             </div>
