--- a/views/bookings/edit.ejs
+++ b/views/bookings/edit.ejs
@@ -1,10 +1,30 @@
 <% layout('layouts/boilerplate') -%>
     
-<div class="row">
+<div class="site-blocks-cover inner-page-cover overlay img-fluid" style="background-image: url('<%=  booking.images.length >1 ? booking.images[0].url : `/images/no-image.png`   %>');" data-aos="fade" data-stellar-background-ratio="0.5">
+  <div class="container">
+    <div class="row align-items-center justify-content-center text-center">
+
+      <div class="col-md-10" data-aos="fade-up" data-aos-delay="400">
+        
+        
+        <div class="row justify-content-center mt-5">
+          <div class="col-md-8 text-center">
+            <h1><%= booking.title %></h1>
+            <p class="mb-0"><%= booking.location %></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>  
+
+
+
+<div class="row mb-3 mt-3">
     <h1 class="text-center">Edit Booking</h1>
     <div class="col-6 offset-3">
         
-    <form action="/bookings/<%= booking._id %>?_method=PUT" method="post"  novalidate class="validated-form">
+    <form action="/bookings/<%= booking._id %>?_method=PUT" method="post"  novalidate class="validated-form" enctype="multipart/form-data">
         <div class="mb-3">
             <label  class="form-label" for="title">Title</label>
             <input class="form-control" type="text" placeholder="title" name="title" value="<%= booking.title%>" id="title" required>
@@ -23,8 +43,17 @@
             <input class="form-control" type="text" placeholder="ex: Morocco, tangier" name="location" value="<%= booking.location%>" id="location" required>
         </div>
         <div class="mb-3">
-            <label class="form-label" for="image">Image</label>
-            <input class="form-control" type="text" placeholder="ex: www.image.com/link" value="<%= booking.image%>" name="image" id="image" required>
+          <label class="form-label" for="image">Images</label>
+          <input type="file" class="form-control" name="image" id="image" multiple>
+        </div>
+        <div class="mb-3">
+          <% booking.images.forEach(function(img,i) { %>
+            <img src="<%= img.thumbnail %> " alt="image" class="img-thumbnail"> 
+            <div class="form-check-inline">
+              <input type="checkbox" name="deleteImages[]" id="image-<%=i%>" value="<%= img.filename %>">
+              <label class="mt-1 ml-2" for="image-<%=i%>">Delete?</label>
+            </div> 
+          <% }) %>
         </div>
         <div>
             <button class="btn btn-success">Update</button>
