--- a/views/bookings/show.ejs
+++ b/views/bookings/show.ejs
@@ -1,6 +1,9 @@
 <% layout('layouts/boilerplate') -%>
 <link rel="stylesheet" href="/css/stars.css">
-<div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('<%= booking.image %> ');" data-aos="fade" data-stellar-background-ratio="0.5">
+
+
+
+  <div class="site-blocks-cover inner-page-cover overlay img-fluid" style="background-image: url('<%=  booking.images.length >1 ? booking.images[0].url : `/images/no-image.png`   %>');" data-aos="fade" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row align-items-center justify-content-center text-center">
 
@@ -19,6 +22,7 @@
   </div>  
   <%- include('../partials/flash') %> 
   
+  <img src="" alt="">
   <div class="site-section">
     
     <div class="container">
@@ -26,12 +30,17 @@
         <div class="col-lg-8">
           
           <div class="mb-4" >
+          <% if (booking.images.length > 1) { %>
             <div class="slide-one-item home-slider owl-carousel">
-              <div><img src="/images/img_2.jpg" alt="Image" class="img-fluid rounded"></div>
-              <div><img src="/images/img_3.jpg" alt="Image" class="img-fluid rounded"></div>
-              <div><img src="/images/img_4.jpg" alt="Image" class="img-fluid rounded"></div>
-              <div><img src="/images/img_1.jpg" alt="Image" class="img-fluid rounded"></div>
+              <% for( let image of booking.images ) { %>
+                <div><img src="<%= image.url %> " alt="Image"  style="height:500px" class="img-fluid rounded"></div>
+              <% } %>
             </div>
+          <% } else {%>
+            <div class="slide-one-item home-slider owl-carousel">
+                <div><img src="/images/no-image.png" alt="Image" class="img-fluid rounded"></div>
+            </div>
+            <% } %> 
           </div>
           <h4 class="card-title "><%= booking.price %> MAD /night </h4>
           <h4 class="card-title ">Created by <%= booking.author.username %></h4>
