--- a/views/bookings/index.ejs
+++ b/views/bookings/index.ejs
@@ -2,6 +2,7 @@
 
 <%- include('../partials/bookings-header') %>   
 
+<div id="map" style="width: 100%; height:500px"></div>
 <div class="site-section">
   <div class="container">
     <div class="row">
@@ -143,4 +144,9 @@
   </div>
 </div>
 
+<script>
+  const mapToken = '<%-process.env.MAPBOX_TOKEN %>';
+  const bookings =  {features: <%- JSON.stringify(bookings) %> };
+</script>
 
+<script src="/js/clusterMap.js"></script>
