--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="/css/rangeslider.css">
 
     <link rel="stylesheet" href="/css/style.css">  
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css' rel='stylesheet' />
     
   </head>
   <body>
